vpc.tf
resource "aws_vpc" "mini_project_vpc" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "mini_project"
  }
}
